<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:gravity="center"
    android:layout_marginBottom="80dp"
    android:layout_height="match_parent"
    android:id="@+id/llParent">

    <RelativeLayout
        android:id="@+id/rlAlert"
        android:background="@color/very_dark_grey"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:minHeight="116dp">

        <TextView android:id="@+id/tvText"
            android:text="Password Field Cannot Be Empty"
            style="@style/MediumStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="12dp"/>

        <TextView

            android:id="@+id/tvBtn2"
            style="@style/DialogOptions"
            android:text="@string/yes"
            android:textAllCaps="true"
            android:layout_below="@+id/tvText"
            android:layout_alignParentRight="true"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="22dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView

            android:id="@+id/tvBtn1"
            style="@style/DialogOptions"
            android:layout_below="@+id/tvText"
            android:text="@string/cancel"
            android:textAllCaps="true"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="22dp"
            android:layout_toLeftOf="@+id/tvBtn2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rlOptions"
        android:background="@color/very_dark_grey"
        android:layout_width="335dp"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tvOption1"
            android:textSize="16.5sp"
            android:fontFamily="sans-serif"
            android:textStyle="normal"
            android:textColor="@color/white_100"
            android:layout_width="match_parent"
            android:lineSpacingExtra="1.5sp"
            android:layout_height="wrap_content"
            android:text="@string/report"
            android:paddingTop="22.5dp"
            android:paddingLeft="24dp"
            android:paddingBottom="16dp"/>

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1.5dp"
            android:layout_below="@+id/tvOption1"
            android:background="@color/cyan_100"/>

        <TextView
            android:id="@+id/tvOption2"
            android:textSize="16.5sp"
            android:fontFamily="sans-serif"
            android:textStyle="normal"
            android:textColor="@color/white_100"
            android:layout_width="match_parent"
            android:lineSpacingExtra="1.5sp"
            android:layout_height="wrap_content"
            android:text="@string/block"
            android:layout_below="@+id/divider"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:paddingLeft="24dp"/>
    </RelativeLayout>

</LinearLayout>